--- a/2025v1.1
+++ b/2025v1.1
@@ -4022,7 +4022,7 @@
             "confName": "MWC",
             "confTeams": [
                 {
-                    "name": "UTEP",
+                    "name": "UTEP Miners",
                     "state": "Texas",
                     "abbreviation": "UTEP",
                     "rival": [
@@ -4030,22 +4030,22 @@
                         "NMSU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "54",
+                    "prestige": "56",
                     "hexColor": "#FF8200"
                 },
                 {
-                    "name": "Fresno State",
+                    "name": "Fresno State Bulldogs",
                     "state": "California",
                     "abbreviation": "FRES",
                     "rival": [
                         "SJSU"
                     ],
                     "rivalryNames": {},
-                    "prestige": "70",
+                    "prestige": "63",
                     "hexColor": "#DB0032"
                 },
                 {
-                    "name": "Hawaii",
+                    "name": "Hawaii Rainbow Warriors",
                     "state": "Hawaii",
                     "abbreviation": "HAW",
                     "rival": [
@@ -4056,7 +4056,7 @@
                     "hexColor": "#024731"
                 },
                 {
-                    "name": "Nevada",
+                    "name": "Nevada Wolf Pack",
                     "state": "Nevada",
                     "abbreviation": "NEV",
                     "rival": [
@@ -4064,11 +4064,11 @@
                         "MONT"
                     ],
                     "rivalryNames": {},
-                    "prestige": "36",
+                    "prestige": "48",
                     "hexColor": "#003366"
                 },
                 {
-                    "name": "Air Force",
+                    "name": "Air Force Falcons",
                     "state": "Colorado",
                     "abbreviation": "AIRF",
                     "rival": [
@@ -4076,11 +4076,11 @@
                         "NAVY"
                     ],
                     "rivalryNames": {},
-                    "prestige": "64",
+                    "prestige": "62",
                     "hexColor": "#003087"
                 },
                 {
-                    "name": "San Jose State",
+                    "name": "San Jose State Spartans",
                     "state": "California",
                     "abbreviation": "SJSU",
                     "rival": [
@@ -4092,7 +4092,7 @@
                     "hexColor": "#0055A2"
                 },
                 {
-                    "name": "New Mexico State",
+                    "name": "New Mexico State Aggies",
                     "state": "New Mexico",
                     "abbreviation": "NMSU",
                     "rival": [
@@ -4104,7 +4104,7 @@
                     "hexColor": "#CF0A2C"
                 },
                 {
-                    "name": "Utah State",
+                    "name": "Utah State Aggies",
                     "state": "Utah",
                     "abbreviation": "USU",
                     "rival": [
@@ -4114,11 +4114,11 @@
                     "rivalryNames": {
                         "UTAH": "Battle of the Brothers"
                     },
-                    "prestige": "48",
+                    "prestige": "55",
                     "hexColor": "#00263A"
                 },
                 {
-                    "name": "New Mexico",
+                    "name": "New Mexico Lobos",
                     "state": "New Mexico",
                     "abbreviation": "UNM",
                     "rival": [
@@ -4126,11 +4126,11 @@
                         "UTEP"
                     ],
                     "rivalryNames": {},
-                    "prestige": "34",
+                    "prestige": "42",
                     "hexColor": "#BA0C2F"
                 },
                 {
-                    "name": "Montana",
+                    "name": "Montana Grizzlies",
                     "state": "Montana",
                     "abbreviation": "MONT",
                     "rival": [
@@ -4138,7 +4138,7 @@
                         "NEV"
                     ],
                     "rivalryNames": {},
-                    "prestige": "33",
+                    "prestige": "32",
                     "hexColor": "#660033"
                 }
             ]
