--- a/2025v1.1
+++ b/2025v1.1
@@ -4149,159 +4149,122 @@
             "confName": "SUN",
             "confTeams": [
                 {
-                    "name": "East Carolina",
-                    "state": "North Carolina",
-                    "abbreviation": "ECU",
+                    "name": "Louisiana-Monroe Warhawks",
+                    "state": "Louisiana",
+                    "abbreviation": "ULM",
                     "rival": [
-                        "TLSA"
+                        "LTEC",
+                        "ULL"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "44",
+                    "hexColor": "#840029"
+                },
+                {
+                    "name": "Arkansas State Red Wolves",
+                    "state": "Arkansas",
+                    "abbreviation": "ARSU",
+                    "rival": [
+                        "RICE",
+                        "UTSA"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "38",
+                    "hexColor": "#CC092F"
+                },
+                {
+                    "name": "Louisiana Tech Bulldogs",
+                    "state": "Louisiana",
+                    "abbreviation": "LTEC",
+                    "rival": [
+                        "ULM",
+                        "ULL"
                     ],
                     "rivalryNames": {},
                     "prestige": "40",
-                    "hexColor": "#592A8A"
+                    "hexColor": "#002F8B"
                 },
                 {
-                    "name": "Central Florida",
-                    "state": "Florida",
-                    "abbreviation": "UCF",
-                    "rival": [
-                        "USF"
-                    ],
-                    "rivalryNames": {
-                        "USF": "War on I4"
-                    },
-                    "prestige": "67",
-                    "hexColor": "#BA9B37"
-                },
-                {
-                    "name": "Cincinnati",
-                    "state": "Ohio",
-                    "abbreviation": "CIN",
-                    "offCoordinator": {
-                        "contractLength": "3",
-                        "startYear": "2022",
-                        "age": "41",
-                        "cumulativePrestige": "0",
-                        "homeState": "Iowa",
-                        "ratPot": "69",
-                        "hometown": "Runnells",
-                        "ratTalent": "88",
-                        "baselinePrestige": "75",
-                        "coachingAbility": "76",
-                        "name": "Gino Guidugli",
-                        "contractYear": "0"
-                    },
-                    "defCoordinator": {
-                        "contractLength": "3",
-                        "startYear": "2022",
-                        "age": "63",
-                        "cumulativePrestige": "0",
-                        "homeState": "Ohio",
-                        "ratPot": "94",
-                        "hometown": "Youngstown",
-                        "ratTalent": "79",
-                        "baselinePrestige": "75",
-                        "coachingAbility": "61",
-                        "name": "Mike Tressel",
-                        "contractYear": "0"
-                    },
-                    "headCoach": {
-                        "contractLength": "6",
-                        "startYear": "2022",
-                        "age": "41",
-                        "ratOff": "67",
-                        "cumulativePrestige": "0",
-                        "ratDef": "63",
-                        "homeState": "Georgia",
-                        "ratPot": "58",
-                        "hometown": "Fort Valley",
-                        "ratTalent": "90",
-                        "baselinePrestige": "75",
-                        "name": "Scott Satterfield",
-                        "contractYear": "0"
-                    },
-                    "rival": [
-                        "MEM"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "59",
-                    "hexColor": "#000000"
-                },
-                {
-                    "name": "Houston",
-                    "state": "Texas",
-                    "abbreviation": "HOU",
-                    "rival": [
-                        "SMU"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "60",
-                    "hexColor": "#C8102E"
-                },
-                {
-                    "name": "Memphis",
-                    "state": "Tennessee",
-                    "abbreviation": "MEM",
-                    "rival": [
-                        "CIN"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "66",
-                    "hexColor": "#003087"
-                },
-                {
-                    "name": "Southern Methodist",
-                    "state": "Texas",
-                    "abbreviation": "SMU",
-                    "rival": [
-                        "HOU"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "68",
-                    "hexColor": "#0033A0"
-                },
-                {
-                    "name": "South Florida",
-                    "state": "Florida",
-                    "abbreviation": "USF",
-                    "rival": [
-                        "TUL"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "65",
-                    "hexColor": "#006747"
-                },
-                {
-                    "name": "Tulane",
-                    "state": "Louisiana",
-                    "abbreviation": "TUL",
-                    "rival": [
-                        "TEM"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "62",
-                    "hexColor": "#006747"
-                },
-                {
-                    "name": "Temple",
-                    "state": "Pennsylvania",
-                    "abbreviation": "TEM",
-                    "rival": [
-                        "TUL"
-                    ],
-                    "rivalryNames": {},
-                    "prestige": "35",
-                    "hexColor": "#9D2235"
-                },
-                {
-                    "name": "Tulsa",
+                    "name": "Tulsa Golden Hurricane",
                     "state": "Oklahoma",
                     "abbreviation": "TLSA",
                     "rival": [
-                        "ECU"
+                        "RICE"
                     ],
                     "rivalryNames": {},
-                    "prestige": "33",
+                    "prestige": "42",
                     "hexColor": "#002D72"
+                },
+                {
+                    "name": "Rice Owls",
+                    "state": "Texas",
+                    "abbreviation": "RICE",
+                    "rival": [
+                        "UTSA",
+                        "TLSA",
+                        "ARSU"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "53",
+                    "hexColor": "#00205B"
+                },
+                {
+                    "name": "UTSA Roadrunners",
+                    "state": "Texas",
+                    "abbreviation": "UTSA",
+                    "rival": [
+                        "ARSU",
+                        "RICE"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "66",
+                    "hexColor": "#F15A22"
+                },
+                {
+                    "name": "Louisiana Ragin Cajuns",
+                    "state": "Louisiana",
+                    "abbreviation": "ULL",
+                    "rival": [
+                        "ULM",
+                        "LTEC",
+                        "USM"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "58",
+                    "hexColor": "#CE181E"
+                },
+                {
+                    "name": "Southern Miss Golden Eagles",
+                    "state": "Mississippi",
+                    "abbreviation": "USM",
+                    "rival": [
+                        "ULL"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "56",
+                    "hexColor": "#FFCC00"
+                },
+                {
+                    "name": "South Alabama Jaguars",
+                    "state": "Alabama",
+                    "abbreviation": "USA",
+                    "rival": [
+                        "TROY"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "44",
+                    "hexColor": "#00205B"
+                },
+                {
+                    "name": "Troy Trojans",
+                    "state": "Alabama",
+                    "abbreviation": "TROY",
+                    "rival": [
+                        "USA"
+                    ],
+                    "rivalryNames": {},
+                    "prestige": "68",
+                    "hexColor": "#8A2432"
                 }
             ]
         }
@@ -4321,7 +4284,7 @@
         "Holiday Bowl",
         "Tampa Bay Bowl",
         "Gauranteed Rate Bowl",
-        "Cheez-It Bowl",
+        "Pop-Tarts Bowl",
         "Las Vegas Bowl",
         "Alamo Bowl",
         "Idaho Potato Bowl",
@@ -4343,6 +4306,6 @@
         "Boca Raton Bowl",
         "Camellia Bowl",
         "Quick Lane Bowl",
-        "TEST BOWL"
+        "Joe's Kansas City BBQ Bowl"
     ]
 }
