--- a/2025v1.1
+++ b/2025v1.1
@@ -3820,7 +3820,7 @@
                     "hexColor": "#003087"
                 },
                 {
-                    "name": "Middle Tennessee Blue Raiders",
+                    "name": "MTSU Blue Raiders",
                     "state": "Tennessee",
                     "abbreviation": "MTSU",
                     "rival": [
@@ -4149,7 +4149,7 @@
             "confName": "SUN",
             "confTeams": [
                 {
-                    "name": "Louisiana-Monroe Warhawks",
+                    "name": "ULM Warhawks",
                     "state": "Louisiana",
                     "abbreviation": "ULM",
                     "rival": [
